css/stylesheet.css
/*
 Copyright (©) 2003-2021 Teus Benschop.
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation; either version 3 of the License, or
 (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 */

/* I. BEGIN CSS RESETS */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  background: transparent;
  vertical-align: baseline;
  font: inherit;
  font-size: 100%;
}
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
  display: block;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after, q:before, q:after {
  content: "";
  content: none;
}
table {
  border-spacing: 0;
  border-collapse: collapse;
}
hr {
  display: block;
  margin: 1em 0;
  padding: 0;
  height: 1px;
  border: 0;
  border-top: 1px solid #CCC;
}
input, select {
  vertical-align: middle;
}
ins {
  background-color: #FF9;
  color: #000;
  text-decoration: none;
}
mark {
  background-color: #FF9;
  color: #000;
  font-weight: bold;
  font-style: italic;
}
del {
  text-decoration: line-through;
}
abbr[title], dfn[title] {
  border-bottom: 1px dotted;
  cursor: help;
}
/* END OF CSS RESETS */

/* II. GLOBAL STYLING */
html {
  height: 100%;
}

*,
*:before,
*:after {
  box-sizing: border-box;
}

@font-face {
  font-family: "Esteban";
  src: url(/fonts/Esteban-Regular.ttf);
}

body {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
  margin: 0;
  padding: 0;
  height: 100%;
  font-family: "Esteban", serif;
  line-height: 1.3;
}

#themepicker {
  font: normal 18px "Montserrat Regular", sans-serif !important;
  color: #171717;
  outline: 0;
  width: 135px;
}

#themepicker:focus, 
#themepicker:hover {
  filter: drop-shadow(0 0 2.5px #999);
  background-color: #ffffef;
}

  #themepicker option[value="1"] {
    background-color: #efefef;
    color: #124568 !important;
  }

  #themepicker option[value="2"] {
    background-color: #171717;
    color: #5e92b4 !important;
  }

.splash {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display:         flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
          flex-grow: 1;
  padding: 5%;
  border-radius: 5px;
}

  .splash > * {
    -webkit-box-flex: 1;
    -webkit-flex-grow: 1;
    -ms-flex-positive: 1;
            flex-grow: 1;
  }

@font-face {
  font-family: "Montserrat Light";
  src: url(/fonts/Montserrat-Light.ttf);
}

#software-name {
  font: 4.5rem "Montserrat Light", sans-serif;
  background-color: #598fb2;
  background-image: linear-gradient(35deg, #196394, #30739f, #598fb2);
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}
.centerbible {
  -webkit-box-flex: 100;
  -webkit-flex-grow: 100;
  -ms-flex-positive: 100;
          flex-grow: 100;
  background-image: url(/pix/bibledit_logo.svg);
  background-position: center center;
  background-size: contain;
  background-repeat: no-repeat;
}

.resource {
  font-family: "Esteban", serif;
}

body,
#editorheader,
#editorinnerheader {
  background-color: #fff;
}

div[contenteditable=true],
.bibleeditor,
#oneeditor .ql-editor,
#oneeditor,
.focusedverse {
  background: #ffffe8;
  color: #171717;
  outline: 0;
}

#topbar {
  width: 100%;
  max-width: 100vw;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
      -ms-flex-pack: space-evenly;
          justify-content: space-evenly;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  padding: .3em;
}

  #topbar a {
    color: #171717;
  }

  #topbar > span {
    position: relative;
    flex-grow: 1;
    padding: .3em .5em;
    margin: 5px;
    -webkit-border-radius: 3px;
            border-radius: 3px;
    text-align: center;
    white-space: nowrap;
    overflow: hidden;
    -o-text-overflow: ellipsis;
       text-overflow: ellipsis;
    transition: all 200ms;
  }

    #topbar > span:first-child {
      position: relative;
      -webkit-flex-basis: initial;
          -ms-flex-preferred-size: initial;
              flex-basis: initial;
      margin: 0 5px;
    }

  #topbar > span > a {
    width: 100%;
    height: 100%;
  }

    #topbar > span:first-child > span {
      border-left: 1.5px solid white;
      margin: .1em .3em;
      padding-left: .3em;
    }
/* ... */

